2002-03-15  Charles Kerr <charles@rebelbase.com>

	Syncing up with small changes from Pan...

	* gmime-content-type.c: remove unused #include <alloca.h>
	* gmime-message.c: same.
	* gmime-part.c: same.
	* internet-address.c: same.

	* gmime-filter-basic.c: add #include <string.h> (strncmp)
	* gmime-filter-yenc.c: add #include <string.h> (strncmp)
	* gmime-iconv-utils.c: add #include <string.h> (strlen)
	* gmime-iconv.c: add #include <string.h> (strlen)
	* gmime-iconv.c: add #include <stdio.h> (sprintf)
	
2002-03-14  Jeffrey Stedfast  <fejj@ximian.com>

	* gmime-filter-yenc.c (filter_reset): Added a switch-statement
	based on direction. Yes, for now the INIT state for encode/decode
	are both the same but this may change? Probably not but oh well
	:-)
	(g_mime_ydecode_step): Sync up with Charles' yenc fixes.

2002-03-13  Jeffrey Stedfast  <fejj@ximian.com>

	* gmime-filter-yenc.c: Compile fixes.

2002-03-12  Jeffrey Stedfast  <fejj@ximian.com>

	* gmime-filter-yenc.c (g_mime_filter_yenc_get_pcrc): Finalize the
	crc before returning.
	(g_mime_filter_yenc_get_crc): Same.

2002-03-12  Jeffrey Stedfast  <fejj@ximian.com>

	* gmime-filter-yenc.c: New filter to encode/decode yEnc streams.

2002-03-03  Jeffrey Stedfast  <fejj@ximian.com>

	Thanks to Carlos Morgado <chbm@chbm.nu>

	* gmime.spec.in: Fix.

2002-03-03  Jeffrey Stedfast  <fejj@ximian.com>

	* gmime-part.c (g_mime_part_write_to_stream): Get rid of some
	extra line feeds.

2002-02-21  Jeffrey Stedfast  <fejj@ximian.com>

	* doc/*: Updated.

	* configure.in: Updated version to 0.8.0

2002-01-25  Jeffrey Stedfast  <fejj@ximian.com>

	* gmime-charset.c (g_mime_charset_name): Updated for AIX, HPUX,
	IRIX, and Sun systems.

2002-01-24  Jeffrey Stedfast  <fejj@ximian.com>

	* gmime-iconv.c (iconv_cache_bucket_add_node): Fixed an oops.
	(iconv_cache_bucket_get_first_unused): Fixed another oops.

2002-01-20  Jeffrey Stedfast  <fejj@ximian.com>

	* gmime-data-wrapper.c (g_mime_data_wrapper_write_to_stream):