@@ -1,3 +1,8 @@
+2002-03-15  Jeffrey Stedfast  <fejj@ximian.com>
+
+	* gmime-utils.c (g_mime_utils_uudecode_step): Fixed a logic
+	mistake. All is good now in the land of UU :-)
+
 2002-03-15  Charles Kerr <charles@rebelbase.com>
 
 	Syncing up with small changes from Pan...
